--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -19,7 +19,7 @@
 </head>
 <header>
     <div class="main-logo">
-                <img src="/chamber/images/index.png" alt="logo">
+                <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -43,11 +43,10 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="/chamber/chamber.html">Home</a></li>
-            <li><a href="/chamber/discover.html">Discover</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="/chamber/join.html">Join</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="../chamber/chamber.html">Home</a></li>
+            <li><a href="../chamber/discover.html">Discover</a></li>
+            <li><a href="../chamber/directory.html">Directory</a></li>
+            <li><a href="../chamber/join.html">Join</a></li>
         </ul>
     </nav>
 </header>
