--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -42,21 +42,21 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="../chamber/chamber.html">Home</a></li>
-            <li><a href="../chamber/discover.html">Discover</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="../chamber/join.html">Join</a></li>
+            <li><a href="/chamber/chamber.html">Home</a></li>
+            <li><a href="/chamber/discover.html">Discover</a></li>
+            <li><a href="/chamber/directory.html">Directory</a></li>
+            <li><a href="/chamber/join.html">Join</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="../chamber/images/hero.jpg">
+            <img class="banner" src="/chamber/images/hero.jpg">
             <button class="call-to-action">Join Flipton</button>
         </div>
         <div id="event">
-            <img class="banner" src="../chamber/images/event.jpg">
+            <img class="banner" src="/chamber/images/event.jpg">
         <p>
             <h2>join us at the community center on</h2><br>
             <h2>March 25th for the community bazzar.</h2><br>
@@ -94,7 +94,7 @@
         <section>
             <h6>Info</h6>
             <div>
-                <img src="../chamber/images/index.png" alt="2nd logo">
+                <img src="/chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
