--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="/chamber/images/favicon.ico">
     <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber//small.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
     <link rel="stylesheet" href="/chamber/styles/medium.css">
     <link rel="stylesheet" href="/chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
