--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -50,7 +50,15 @@
   </nav>
 </header>
 <body>
-    
+    <main id="directory">
+        <div class="menu">
+            <button id="grid">⏹️Grid</button>
+            <button id="list">📄List</button>
+        </div>
+        <hr>
+        <article class="grid">
+        </article>
+    </main>
 </body>
 <footer>
     <section>
@@ -83,4 +91,6 @@
             </script>
     </section>
 </footer>
+<script src="/chamber/scripts/directory.js"></script>
+<script src="/chamber/scripts/directory2.js"></script>
 </html>
