--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="icon" href="chamber/images/favicon.ico">
+    <link rel="stylesheet" href="chamber/styles/small.css">
+    <link rel="stylesheet" href="chamber/styles/medium.css">
+    <link rel="stylesheet" href="chamber/styles/large.css">
+    <link rel="stylesheet" href="chamber/styles/normalize.css">
     <title>Seth Markle's Assignment Portal</title>
 </head>
 <body>    
