--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -18,7 +18,7 @@
 </head>
 <header>
     <div class="main-logo">
-                <img src="../chamber/images/index.png" alt="logo">
+                <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -26,10 +26,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="../chamber/images/fb.png" alt="fb icon">
+            <img src="/chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="../chamber/images/linkdin.jpg" alt="in icon">
+            <img src="/chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -51,11 +51,11 @@
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="../chamber/images/hero.jpg">
+            <img class="banner" src="/chamber/images/hero.jpg">
             <button class="call-to-action">Join Flipton</button>
         </div>
         <div id="event">
-            <img class="banner" src="../chamber/images/event.jpg">
+            <img class="banner" src="/chamber/images/event.jpg">
         <p>
             <h2>join us at the community center on</h2><br>
             <h2>March 25th for the community bazzar.</h2><br>
@@ -93,7 +93,7 @@
         <section>
             <h6>Info</h6>
             <div>
-                <img src="../chamber/images/index.png" alt="2nd logo">
+                <img src="/chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
