--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -9,16 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="chamber/images/favicon.ico">
-    <link rel="stylesheet" href="chamber/styles/normalize.css">
-    <link rel="stylesheet" href="chamber/styles/small.css">
-    <link rel="stylesheet" href="chamber/styles/medium.css">
-    <link rel="stylesheet" href="chamber/styles/large.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
-                <img src="chamber/images/index.png" alt="logo">
+                <img src="images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -26,10 +26,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="chamber/images/fb.png" alt="fb icon">
+            <img src="images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="chamber/images/linkdin.jpg" alt="in icon">
+            <img src="images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -42,20 +42,20 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="chamber/chamber.html">Home</a></li>
-            <li><a href="chamber/discover.html">Discover</a></li>
-            <li><a href="chamber/directory.html">Directory</a></li>
-            <li><a href="chamber/join.html">Join</a></li>
+            <li><a href="chamber.html">Home</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="chamber/images/hero.jpg">
+            <img class="banner" src="images/hero.jpg">
             <button class="call-to-action">Join Flipton</button>
         </div>
         <div id="event">
-            <img class="banner" src="chamber/images/event.jpg">
+            <img class="banner" src="images/event.jpg">
         <p>
             <h2>join us at the community center on</h2><br>
             <h2>March 25th for the community bazzar.</h2><br>
@@ -93,7 +93,7 @@
         <section>
             <h6>Info</h6>
             <div>
-                <img src="chamber/images/index.png" alt="2nd logo">
+                <img src="images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
