--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -42,10 +42,10 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="chamber.html">Home</a></li>
-            <li><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
+            <li><a href="/chamber/chamber.html">Home</a></li>
+            <li><a href="/chamber/discover.html">Discover</a></li>
+            <li><a href="/chamber/directory.html">Directory</a></li>
+            <li><a href="/chamber/join.html">Join</a></li>
         </ul>
     </nav>
 </header>
