--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,17 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
-    <link rel="stylesheet" href="/chamber/styles/discover.css">
+    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/discover.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
-                <img src="/chamber/images/index.png" alt="logo">
+                <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="/chamber/images/fb.png" alt="fb icon">
+            <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+            <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -43,34 +43,34 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="/chamber/chamber.html">Home</a></li>
-            <li><a href="/chamber/discover.html">Discover</a></li>
-            <li><a href="/chamber/directory.html">Directory</a></li>
-            <li><a href="/chamber/join.html">Join</a></li>
+            <li><a href="../chamber/chamber.html">Home</a></li>
+            <li><a href="../chamber/discover.html">Discover</a></li>
+            <li><a href="../chamber/directory.html">Directory</a></li>
+            <li><a href="../chamber/join.html">Join</a></li>
         </ul>
     </nav>
 </header>
         <picture>
-            <img src='/chamber/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
+            <img src='../chamber/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
             <P>Flipton Beach</P>
         </picture>
         <picture>
-            <img src='/chamber/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Converted Train Station"/>
+            <img src='../chamber/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Converted Train Station"/>
             <P>Converted Train Station</P>
         </picture>
         <picture>
-            <img src='/chamber/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="The Great Outdoors"/>
+            <img src='../chamber/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="The Great Outdoors"/>
             <P>The Great Outdoors</P>
         </picture>
-        <picture><img src='/chamber/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Old Train Station"/>
+        <picture><img src='../chamber/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Old Train Station"/>
             <P>Old Train Station</P>
         </picture>
         <picture>
-            <img src='/chamber/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Thank You for Coming"/>
+            <img src='../chamber/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Thank You for Coming"/>
             <P>Thank You for Coming</P>
         </picture>
         <picture>
-            <img src='/chamber/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="The Forest of Flipton"/>
+            <img src='../chamber/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="The Forest of Flipton"/>
             <P>The Forest of Flipton</P>
         </picture>
         <script src="chamber/scripts/lazyscripts.js"></script>
