--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,15 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
     <title>The Business Directory Page</title>
 </head>
 <header>
   <div class="main-logo">
-              <img src="/chamber/images/index.png" alt="logo">
+              <img src="../chamber/images/index.png" alt="logo">
           </a>
       <section>
           <h1>Flipton Chamber of Commerce</h1>
@@ -26,10 +26,10 @@
   </div>
   <div class="social">
       <a href="https://facebook.com" target="_blank">
-          <img src="/chamber/images/fb.png" alt="fb icon">
+          <img src="../chamber/images/fb.png" alt="fb icon">
       </a>
       <a href="https://www.linkedin.com/" target="_blank">
-          <img src="/chamber/images/linkdin.jpg" alt="in icon">
+          <img src="../chamber/images/linkdin.jpg" alt="in icon">
       </a>
   </div>
   <div id="datebox">
@@ -42,10 +42,10 @@
   <nav>
       <ul class="navigation">
           <li><a id="menu"></a></li>
-          <li><a href="/chamber/chamber.html">Home</a></li>
-          <li><a href="/chamber/discover.html">Discover</a></li>
-          <li><a href="/chamber/directory.html">Directory</a></li>
-          <li><a href="/chamber/join.html">Join</a></li>
+          <li><a href="../chamber/chamber.html">Home</a></li>
+          <li><a href="../chamber/discover.html">Discover</a></li>
+          <li><a href="../chamber/directory.html">Directory</a></li>
+          <li><a href="../chamber/join.html">Join</a></li>
       </ul>
   </nav>
 </header>
@@ -64,7 +64,7 @@
     <section>
         <h6>Info</h6>
         <div>
-            <img src="/chamber/images/index.png" alt="2nd logo">
+            <img src="../chamber/images/index.png" alt="2nd logo">
         </div>
         <ul>
             <li><h2>Flipton Chamber of Commerce</h2></li>
@@ -91,6 +91,6 @@
             </script>
     </section>
 </footer>
-<script src="/chamber/scripts/directory.js"></script>
-<script src="/chamber/scripts/directory2.js"></script>
+<script src="../chamber/scripts/directory.js"></script>
+<script src="../chamber/scripts/directory2.js"></script>
 </html>
