--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../chamber/styles/small.css">
     <link rel="stylesheet" href="../chamber/styles/medium.css">
     <link rel="stylesheet" href="../chamber/styles/large.css">
-    <title>The Business Directory Page</title>
+    <title>Flipton Business Directory Page</title>
 </head>
 <header>
   <div class="main-logo">
