--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../chamber/styles/medium.css">
     <link rel="stylesheet" href="../chamber/styles/large.css">
     <link rel="stylesheet" href="../chamber/styles/join.css">
-    <title>Flipton Chamber of Commerce</title>
+    <title>Flipton Chamber Join Page</title>
 </head>
 <header>
     <div class="main-logo">
