--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -80,6 +80,7 @@
             </p>
         </div>
         <div id="spotlight 1"><b>Fire Safety Awareness</b>
+            <img class="banner" src="images/view.jpg">
             
         </div>
         <div id="spotlight 2"><b>DMV Registration</b>
