--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li>Lesson 9: <a href="chamber/directory.html">The Business Directory Page</a></li>
                 <li>Lesson 10: <a href="lesson10/weatherapi.html">Weather API Test</a></li>
                 <li>Lesson 10: <a href="chamber/chamber.html">Using the Weather API</a></li>
-                <li>Lesson 11: <a href="lesson11/">Title</a></li>
+                <li>Lesson 11: <a href="chamber/chamber.html">The Chamber of Commerce Site</a></li>
             </ul>
         </main>
         <footer class="footer">
