--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -57,8 +57,8 @@
         <div id="event">
             <img class="banner" src="images/event.jpg">
         <p>
-            <h2>Join us at the community center on
-                March 25th for the community bazzar.
+            <h3>Join us at the community center on<br>
+                March 25th for the community bazzar.</h3>
         </p>
         </div>
         <div id="weather"><h2>Todays Weather</h2>
@@ -74,18 +74,18 @@
         <div id="join">
             <button class="call-to-action">Join Flipton</button>
             <p>
-               Join the Flipton Chamber of Commerce<br>
-               and see how to help the area.<br>
-               See how the chamber can help you.
+               <h3>The Flipton Chamber of Commerce<br></h3>
+               <h3>and see how to help the area.<br></h3>
+               <h3>See how the chamber can help you.<br></h3>
             </p>
         </div>
-        <div id="spotlight 1"><b>Fire Safety Awareness</b>
+        <div id="spotlight1"><b>Fire Safety Awareness</b>
             <img class="banner" src="images/view.jpg">  
         </div>
-        <div id="spotlight 2"><b>DMV Registration</b>
+        <div id="spotlight2"><b>DMV Registration</b>
             <img class="banner" src="images/art.jpg">    
         </div>
-        <div id="spotlight 3"><b>Apply for a Permit</b>
+        <div id="spotlight3"><b>Apply for a Permit</b>
             <img class="banner" src="images/thankyou.jpg">
         </div>
     </main>
