--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -80,13 +80,13 @@
             </p>
         </div>
         <div id="spotlight1"><b>Fire Safety Awareness</b>
-            <img class="banner" src="images/view.jpg">  
+            <img class="banner" src="images/view.jpg" alt="forest" class="center">
         </div>
         <div id="spotlight2"><b>DMV Registration</b>
-            <img class="banner" src="images/art.jpg">    
+            <img class="banner" src="images/art.jpg" alt="dmv" class="center">    
         </div>
         <div id="spotlight3"><b>Apply for a Permit</b>
-            <img class="banner" src="images/thankyou.jpg">
+            <img class="banner" src="images/thankyou.jpg" alt="thankyou" class="center">
         </div>
     </main>
     <footer>
