--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -18,105 +18,103 @@
 </head>
 <header>
     <div class="main-logo">
-                <img src="images/index.png" alt="logo">
-            </a>
-        <section>
-            <h1>Flipton Chamber of Commerce</h1>
-        </section>
+      <img src="images/index.png" alt="logo">
+      <section>
+        <h1>Flipton Chamber of Commerce</h1>
+      </section>
     </div>
     <div class="social">
-        <a href="https://facebook.com" target="_blank">
-            <img src="images/fb.png" alt="fb icon">
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-            <img src="images/linkdin.jpg" alt="in icon">
-        </a>
+      <a href="https://facebook.com" target="_blank"><img src="images/fb.png" alt="fb icon"></a> <a href="https://www.linkedin.com/" target="_blank"><img src="images/linkdin.jpg" alt="in icon"></a>
     </div>
     <div id="datebox">
-        <p id="p1"></p>
-        <script>
-            var date = new Date();
-            document.getElementById("p1").innerHTML = date;
-        </script>
+      <p id="p1"></p>
+      <script>
+              var date = new Date();
+              document.getElementById("p1").innerHTML = date;
+      </script>
     </div>
     <nav>
-        <ul class="navigation">
-            <li><a id="menu"></a></li>
-            <li><a href="../chamber/chamber.html">Home</a></li>
-            <li><a href="../chamber/discover.html">Discover</a></li>
-            <li><a href="../chamber/directory.html">Directory</a></li>
-            <li><a href="../chamber/join.html">Join</a></li>
-        </ul>
+      <ul class="navigation">
+        <li>
+          <a id="menu"></a>
+        </li>
+        <li>
+          <a href="../chamber/chamber.html">Home</a>
+        </li>
+        <li>
+          <a href="../chamber/discover.html">Discover</a>
+        </li>
+        <li>
+          <a href="../chamber/directory.html">Directory</a>
+        </li>
+        <li>
+          <a href="../chamber/join.html">Join</a>
+        </li>
+      </ul>
     </nav>
-</header>
-    <main>
-        <div id="hero">
-            <img class="banner" src="images/hero.jpg">
-            <p>Welcome to the town of Flipton, Ohio.</p>
-        </div>
-        <div id="event">
-            <img class="banner" src="images/event.jpg">
-        <p>
-            <h3>Join us at the community center on<br>
-                March 25th for the community bazzar.</h3>
-        </p>
-        </div>
-        <div id="weather"><h2>Todays Weather</h2>
-            <h2 id="temperature">23°F</h2>
-            <p id="wind-speed">Wind Speed</p>
-            <p>9 MPH</p>
-        </div>
-        <div id="news">
-            <span id="news-date"><b>News</b></span>
-            <p>Join us for the cherry pie bake off?</p>
-            <p>Sunday March 26th @ 2pm</p>
-        </div>
-        <div id="join">
-            <button class="call-to-action">Join Flipton</button>
-            <p>
-               <h3>The Flipton Chamber of Commerce<br></h3>
-               <h3>and see how to help the area.<br></h3>
-               <h3>See how the chamber can help you.<br></h3>
-            </p>
-        </div>
-        <div id="spotlight1"><b>Fire Safety Awareness</b>
-            <img class="banner" src="images/view.jpg" alt="forest" class="center">
-        </div>
-        <div id="spotlight2"><b>DMV Registration</b>
-            <img class="banner" src="images/art.jpg" alt="dmv" class="center">    
-        </div>
-        <div id="spotlight3"><b>Apply for a Permit</b>
-            <img class="banner" src="images/thankyou.jpg" alt="thankyou" class="center">
-        </div>
-    </main>
-    <footer>
-        <section>
-            <h6>Info</h6>
-            <div>
-                <img src="images/index.png" alt="2nd logo">
-            </div>
-            <ul>
-                <li><h2>Flipton Chamber of Commerce</h2></li>
-                <li><p>552 Flipton Way</p></li>
-                <li><p>Flipton Ohio, 44103</p></li>
-            </ul>
-        </section>
-        <section>
-            <p>fliptonchamber.org
-            <p>216-867-5309
-            <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
-        </section>
-        <hr>
-        <section>
-            <h6>Info</h6>
-            <p>&copy;<span id="currentyear"></span> 2022 Flipton Chamber
-                <a>|</a><br> Seth Markle
-                <a>|</a><br>WDD 230 Project      
-                <p id="p1"></p>
-        </section>
-    </footer>
-    <script>
-        var date = new Date();
-        document.getElementById("p1").innerHTML = date;
-    </script>
-    </html>
+  </header>
+  <main>
+    <div id="hero">
+      <img class="banner" src="images/hero.jpg" alt="hero">
+      <p>Welcome to the town of Flipton, Ohio.</p>
+    </div>
+    <div id="event">
+      <img class="banner" src="images/event.jpg" alt="event">
+      <h3>Join us at the community center on<br>
+      March 25th for the community bazzar.</h3>
+    </div>
+    <div id="weather">
+      <h2>Todays Weather</h2>
+      <h2 id="temperature">23°F</h2>
+      <p id="wind-speed">Wind Speed</p>
+      <p>9 MPH</p>
+    </div>
+    <div id="news">
+      <span id="news-date"><b>News</b></span>
+      <p>Join us for the cherry pie bake off?</p>
+      <p>Sunday March 26th @ 2pm</p>
+    </div>
+    <div id="join">
+      <button class="call-to-action">Join Flipton</button>
+      <h3>The Flipton Chamber of Commerce<br></h3>
+      <h3>and see how to help the area.<br></h3>
+      <h3>See how the chamber can help you.<br></h3>
+    </div>
+    <div id="spotlight1"><b>Fire Safety Awareness</b> <img src="images/view.jpg" alt="forest" class="center"></div>
+    <div id="spotlight2"><b>DMV Registration</b> <img src="images/art.jpg" alt="dmv" class="center"></div>
+    <div id="spotlight3"><b>Apply for a Permit</b> <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
+  </main>
+  <footer>
+    <section>
+      <h6>Info</h6>
+      <div><img src="images/index.png" alt="2nd logo"></div>
+      <ul>
+        <li>
+          <h2>Flipton Chamber of Commerce</h2>
+        </li>
+        <li>
+          <p>552 Flipton Way</p>
+        </li>
+        <li>
+          <p>Flipton Ohio, 44103</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <p>fliptonchamber.org</p>
+      <p>216-867-5309</p>
+      <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
+    </section>
+    <hr>
+    <section>
+      <h6>Info</h6>
+      <p>©<span id="currentyear"></span> 2022 Flipton Chamber <a>|</a><br>
+      Seth Markle <a>|</a><br>
+      WDD 230 Project</p>
+      <p id="p1"></p>
+    </section>
+  </footer>
+  <script>
+          var date = new Date();
+          document.getElementById("p1").innerHTML = date;
+  </script>
