--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -60,8 +60,9 @@
     </div>
     <div id="event">
       <img class="banner" src="images/event.jpg" alt="event">
-      <h3>Join us at the community center on<br>
-      March 25th for the community bazzar.</h3>
+      <h3>Join us at the community center on
+        March 25th for the fun walk.  The walk
+        begins at noon.</h3>
     </div>
     <div id="weather">
       <h2>Todays Weather</h2>
@@ -80,9 +81,15 @@
       <h3>and see how to help the area.<br></h3>
       <h3>See how the chamber can help you.<br></h3>
     </div>
-    <div id="spotlight1"><b>Fire Safety Awareness</b> <img src="images/view.jpg" alt="forest" class="center"></div>
-    <div id="spotlight2"><b>DMV Registration</b> <img src="images/art.jpg" alt="dmv" class="center"></div>
-    <div id="spotlight3"><b>Apply for a Permit</b> <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
+    <div id="spotlight1">
+        <span id="one"><p>Fire Safety Awareness</p><span>
+            <img src="images/view.jpg" alt="forest" class="center"></div>
+    <div id="spotlight2">
+        <span id="two"><p>DMV Registration</p><span></span>
+        <img src="images/art.jpg" alt="dmv" class="center"></div>
+    <div id="spotlight3">
+        <span id="three"><p>Apply for a permit</p><span>
+        <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
   </main>
   <footer>
     <section>
