--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="../images/favicon.ico">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
