--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -55,9 +55,8 @@
   </header>
   <main>
     <div id="hero">
-        <p>Welcome to the town of Flipton, Ohio.</p>
+              <p>Welcome to the town of Flipton, Ohio.</p>
       <img class="banner" src="images/hero.jpg" alt="hero">
-
     </div>
     <div id="event">
       <img class="banner" src="images/event.jpg" alt="event">
@@ -92,7 +91,7 @@
         <span id="three"><p>Apply for a permit</p><span>
         <img src="images/thankyou.jpg" alt="thankyou" class="center"></div>
   </main>
-  <footer>
+  <footer class="footer">
     <section>
       <h6>Info</h6>
       <div><img src="images/index.png" alt="2nd logo"></div>
