--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,9 +8,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
         <link rel="shortcut icon" href="../lesson7/images/favicon.ico">
 		<meta name="progressive loading of images" content="lazy loading">
-        <title>W07 Lazy Loading</title>
+        <link href="stylesheet" href="../lesson7/scripts/layscripts.js">
         <link rel="stylesheet" href="../lesson7/styles/lazy.css">
-    </head>
+        <title>W07 Lazy Loading</title>
+    </head>    
     <body>
 		<h1>Progressive Loading of Images</h1>
         <picture>
