--- a/chamber/join.html
+++ b/chamber/join.html
@@ -111,34 +111,24 @@
       <label class="form_label" for="businessDescription">Business Description</label> <input type="hidden" id="date" name="date" value="CurrentTime"> <input type="hidden" id="time" name="time" value="CurrentDate">
     </form>
   </main>
-  <footer>
+  <footer class="footer">
     <section>
       <h6>Info</h6>
       <div><img src="images/index.png" alt="2nd logo"></div>
       <ul>
         <li>
-          <h2>Flipton Chamber of Commerce</h2>
-        </li>
-        <li>
-          <p>552 Flipton Way</p>
-        </li>
-        <li>
-          <p>Flipton Ohio, 44103</p>
+          Flipton Chamber of Commerce           
+          552 Flipton Way
+        Flipton Ohio, 44103
+       fliptonchamber.org
+       216-867-5309
+      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a>
+      ©<span id="currentyear"></span> 2022 Flipton Chamber Seth Markle
+      WDD 230 Project
         </li>
       </ul>
-    </section>
-    <section>
-      <p>fliptonchamber.org</p>
-      <p>216-867-5309</p>
-      <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
-    </section>
-    <hr>
-    <section>
-      <h6>Info</h6>
-      <p>©<span id="currentyear"></span> 2022 Flipton Chamber <a>|</a><br>
-      Seth Markle <a>|</a><br>
-      WDD 230 Project</p>
       <p id="p1"></p>
+    </ul>
     </section>
   </footer>
   <script>
