--- a/chamber/join.html
+++ b/chamber/join.html
@@ -117,18 +117,16 @@
       <div><img src="images/index.png" alt="2nd logo"></div>
       <ul>
         <li>
-          Flipton Chamber of Commerce           
-          552 Flipton Way
-        Flipton Ohio, 44103
-       fliptonchamber.org
-       216-867-5309
-      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a>
-      ©<span id="currentyear"></span> 2022 Flipton Chamber Seth Markle
-      WDD 230 Project
+        Flipton Chamber of Commerce<br>           
+        552 Flipton Way | Flipton Ohio, 44103<br>
+        fliptonchamber.org<br>
+        216-867-5309<br>
+        <br>
+      <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+      <br>
+      © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
         </li>
       </ul>
-      <p id="p1"></p>
-    </ul>
     </section>
   </footer>
   <script>
