--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -74,35 +74,25 @@
             <P>The Forest of Flipton</P>
         </picture>
         <script src="chamber/scripts/lazyscripts.js"></script>
-        <footer>
+        <footer class="footer">
             <section>
-                <h6>Info</h6>
-                <div>
-                    <img src="/chamber/images/index.png" alt="2nd logo">
-                </div>
-                <ul>
-                    <li><h2>Flipton Chamber of Commerce</h2></li>
-                    <li><p>552 Flipton Way</p></li>
-                    <li><p>Flipton Ohio, 44103</p></li>
-                </ul>
+              <h6>Info</h6>
+              <div><img src="images/index.png" alt="2nd logo"></div>
+              <ul>
+                <li>
+                Flipton Chamber of Commerce<br>           
+                552 Flipton Way | Flipton Ohio, 44103<br>
+                fliptonchamber.org<br>
+                216-867-5309<br>
+                <br>
+              <a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a><br>
+              <br>
+              © 2022 Flipton Chamber | Seth Markle | WDD 230 Project
+                </li>
+              </ul>
             </section>
-            <section>
-                <p>fliptonchamber.org
-                <p>216-867-5309
-                <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
-            </section>
-            <hr>
-            <section>
-                <h6>Info</h6>
-                <p>&copy;<span id="currentyear"></span> 2022 Flipton Chamber
-                    <a>|</a><br> Seth Markle
-                    <a>|</a><br>WDD 230 Project
-                    <a>|</a><br>Last Modification:         
-                    <p id="p1"></p>
-                    <script>
-                        var date = new Date();
-                        document.getElementById("p1").innerHTML = date;
-                    </script>
-            </section>
-        </footer>
-        </html>
+          </footer>
+          <script>
+                  var date = new Date();
+                  document.getElementById("p1").innerHTML = date;
+          </script>
