--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -65,21 +65,22 @@
         begins at noon.</h3>
     </div>
     <div id="weather">
-      <h2>Todays Weather</h2>
-      <h2 id="temperature">23°F</h2>
-      <p id="wind-speed">Wind Speed</p>
-      <p>9 MPH</p>
+        <h2>Todays Weather</h2>
+        Temperature 23°F
+        Windspeed
+        9 MPH
     </div>
     <div id="news">
-      <span id="news-date"><b>News</b></span>
-      <p>Join us for the cherry pie bake off?</p>
-      <p>Sunday March 26th @ 2pm</p>
+      <h3>News</h3>
+      Join us for the cherry pie bake off?<br>
+      Sunday March 26th @ 2pm</h3>
     </div>
     <div id="join">
       <button class="call-to-action">Join Flipton</button>
-      <h3>The Flipton Chamber of Commerce<br></h3>
-      <h3>and see how to help the area.<br></h3>
-      <h3>See how the chamber can help you.<br></h3>
+      <h3>Join the Flipton Chamber of Commerce
+      and see how the chamber can help you.</h3>
+      <img class="banner" src="images/beach.jpg" alt="join photo">
+
     </div>
     <div id="spotlight1">
         <span id="one"><p>Fire Safety Awareness</p><span>
