--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -55,23 +55,25 @@
   </header>
   <main>
     <div id="hero">
-              <p>Welcome to the town of Flipton, Ohio.</p>
+      <span id="hero"></span>Welcome to the town of Flipton, Ohio.
       <img class="banner" src="images/hero.jpg" alt="hero">
     </div>
     <div id="event">
       <img class="banner" src="images/event.jpg" alt="event">
-      <h3>Join us at the community center on
+        <span id="event"></span> Upcoming Events<br>
+        <br>
+        Join us at the community center on
         March 25th for the fun walk.  The walk
-        begins at noon.</h3>
+        begins at noon.  
     </div>
     <div id="weather">
-        <h2>Todays Weather</h2>
+        <span id="weather"></span>Todays Weather<br>
         Temperature 23°F
         Windspeed
         9 MPH
     </div>
     <div id="news">
-      <h3>News</h3>
+      <span id="news"></span><h3>News</h3>
       Join us for the cherry pie bake off?<br>
       Sunday March 26th @ 2pm</h3>
     </div>
